--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,12 @@ install:
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
+  - conda config --add channels conda-forge
   - conda update -q conda
   - conda info -a
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-  - conda search ipopt
-  - conda search cyipopt
-  - conda install -q -y --file requirements.txt
   - source activate test-environment
+  - conda install -q -y --file requirements.txt
   # - python setup.py install
 
 script:
