--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
   - conda install -q -y --file requirements.txt
-  # - python setup.py install
+  - python setup.py install
 
 script:
   - pytest
