--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+cyipopt>=0.2.0
+cython>=0.29.2
+matplotlib==2.2.3
+numba>=0.40
 numpy>=1.15
+ordered-set>=3.1
+pyproprop>=0.1
 scipy>=1.2
 sympy>=1.3
-cython>=0.29.2
-cyipopt>=0.2.0
-numba>=0.40
-ordered-set>=3.1
-matplotlib==2.2.3
