--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
+casadi>=3.5.5
 cyipopt>=0.2.0
-cython>=0.29.2
-matplotlib>=3.1
-numba>=0.40
-numpy>=1.15
-ordered-set>=3.1
-pyproprop>=0.4.1
-scipy>=1.2
-sympy>=1.3
+matplotlib>=3.3.2
+numba>=0.51.2
+numpy>=1.19.1
+pyproprop>=0.4.2
+scipy>=1.5.2
+sympy>=1.6.2
