--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ install:
 
 script:
   # Tests
-  - pytest --cov-report term --cov=pycollo tests/
+  - python -m pytest --cov-report term --cov=pycollo tests/
   # Docs
   - cd docs; make clean; cd ..
   - sphinx-build -nWT -b dummy docs/source docs/build
