Add additional exclude directories for tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ keyword =
 [options]
 zip_safe = False
 include_package_data = True
-packages = find:
+packages = find_namespace:
 python_requires = >=3.7
 install_requires =
     casadi >=3.5.5
@@ -64,6 +64,9 @@ tests =
 [options.packages.find]
 exclude =
     tests
+    *.tests
+    *.tests.*
+    tests.*
 
 [tool:pytest]
 testpaths =
