--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ keyword =
 [options]
 zip_safe = False
 include_package_data = True
-packages = find_namespace:
+packages = pycollo
 python_requires = >=3.7
 install_requires =
     casadi >=3.5.5
@@ -60,13 +60,6 @@ tests =
     pytest >=6.0
     pytest-cases >=2.2.5
     pytest-cov >=2.10
-
-[options.packages.find]
-exclude =
-    tests
-    *.tests
-    *.tests.*
-    tests.*
 
 [tool:pytest]
 testpaths =
