--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Install basic dependencies
         run: conda install -q -y --file=requirements.txt --file=tests/requirements.txt
       - name: Install Pycollo
-        run: pip install
+        run: pip install .
       - name: Test with pytest
         run: pytest tests/
