--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,19 +4,54 @@ on: [push, pull_request]
 
 jobs:
   build:
-    name: Build and Generate Documentation
+    name: Test build documentation
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-            python-version: '3.x'
-      - name: Build docs
+            python-version: '3.11'
+      - name: Install dependencies
+        run: python -m pip install --upgrade -r docs/requirements.txt
+      - name: Build documentation with Sphinx
         run: |
-          pip install --upgrade -r docs/requirements.txt
-          cd docs
-          make clean
-          cd ..
-          sphinx-build -nWT -b dummy docs/source docs/build
+            make -C docs clean
+            make -C docs -nWT -b dummy
+
+  deploy:
+    name: Deploy documentation
+    needs: build
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+            python-version: '3.11'
+      - name: Install dependencies
+        run: python -m pip install --upgrade -r docs/requirements.txt
+      - name: Build documentation with Sphinx
+        run: |
+          make -C docs clean
+          make -C docs html
+      - name: Init new repo in dist folder and commit generated files
+        run: |
+          cd docs/build/html/
+          git init
+          touch .nojekyll
+          git add -A
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git commit -m 'deploy'
+      - name: Force push to destination branch
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          force: true
+          directory: ./docs/build/html
