--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,27 +1,44 @@
 name: test
 
-on: [push]
+on: [push, pull_request]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
+  test:
+    name: Build and run tests
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.8', '3.9', '3.10', '3.11']
     defaults:
       run:
         shell: bash -l {0}
     steps:
       - name: Checkout Pycollo
-        uses: actions/checkout@v2
-      - uses: conda-incubator/setup-miniconda@v2
+        uses: actions/checkout@v3
+      - name: Set up Mamba
+        uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
           activate-environment: test-environment
-          python-version: "3.9"
+          python-version: ${{ matrix.python-version }}
           channels: conda-forge
-          conda-build-version: 3.21.4
-      - name: Install basic dependencies
-        run: conda install -q -y --file=requirements.txt --file=tests/requirements.txt
+          miniforge-variant: Mambaforge
+      - name: Install runtime and test dependencies
+        run: |
+          mamba install -y --file=requirements.txt --file=tests/requirements.txt
+          mamba list
       - name: Install Pycollo
-        run: pip install .
+        run: python -m pip install .
       - name: Test with pytest
-        run: pytest tests/
+        run: pytest --cov-report=xml --cov=pyproprop tests/
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: true
+          verbose: true
