--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,14 +31,19 @@ jobs:
           miniforge-variant: Mambaforge
       - name: Install runtime and test dependencies
         run: |
+          mamba install -n base conda-libmamba-solver
+          mamba config --set solver libmamba
           mamba install -y --file=requirements.txt --file=tests/requirements.txt
           mamba list
       - name: Install Pycollo
         run: python -m pip install .
       - name: Test with pytest
-        run: pytest --cov-report=xml --cov=pyproprop tests/
+        run: pytest --cov-report=xml:./coverage.xml --cov-report term-missing
       - name: Upload Coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.xml
+          name: pycollo
           fail_ci_if_error: true
           verbose: true
