--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,11 @@
 name: deploy
 
 on:
-  workflow_run:
-    workflows: [docs]
-    types: [completed]
-    branches: [main]
+  push:
+    workflow_run:
+      workflows: [docs]
+      types: [completed]
+      branches: [main]
 
 jobs:
   deploy:
