--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,11 +38,4 @@ jobs:
       - name: Install Pycollo
         run: python -m pip install .
       - name: Test with pytest
-        run: pytest --cov-report=xml --cov-report term-missing
-      - name: Upload Coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          name: pycollo
-          fail_ci_if_error: true
-          verbose: true
+        run: pytest
