--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,94 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools_scm]
 # See configuration details in https://github.com/pypa/setuptools_scm
 version_scheme = "no-guess-dev"
+
+[metadata]
+name = pycollo
+author = Sam Brockie
+author_email = sambrockie@icloud.com
+description = General-purpose optimal control, trajectory optimisation and parameter optimisation using direct collocation
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+url = https://pycollo.readthedocs.io
+project_urls =
+    Documentation = https://pycollo.readthedocs.io
+    PyPI = https://pypi.org/project/pycollo/
+    conda-forge = https://anaconda.org/conda-forge/pycollo
+    Source Code = https://github.com/brocksam/pycollo
+    Bug Tracker = https://github.com/brocksam/pycollo/issues
+classifiers =
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Science/Research
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Natural Language :: English
+    Topic :: Utilities
+license = MIT
+license_files = [LICENSE]
+keyword =
+    optimal control
+    optimal control problem
+    ocp
+    trajectory optimisation
+    trajectory optimization
+    parameter optimisation
+    parameter optimization
+    collocation
+    direct collocation
+    predictive simulation
+
+[options]
+zip_safe = False
+include_package_data = True
+packages = pycollo
+python_requires = >=3.7
+install_requires =
+    casadi >=3.5.5
+    matplotlib >=3.3.2
+    numba >=0.51.2
+    numpy >=1.19.1
+    pyproprop >=0.4.10
+    scipy >=1.5.2
+    sympy >=1.6.2
+
+[options.extras_require]
+docs =
+    sphinx >=3.2
+    sphinx-autodoc-typehints >=1.11
+    sphinx_rtd_theme >=0.5
+tests =
+    hypothesis >=5.28
+    pytest >=6.0
+    pytest-cases >=2.2.5
+    pytest-cov >=2.10
+
+[tool:pytest]
+testpaths =
+    tests
+markers =
+    incremental: marks related sequential tests to stop after an earlier failure
+
+[bdist_wheel]
+universal = 1
+
+[devpi:upload]
+no_vcs = 1
+formats = bdist_wheel
+
+[flake8]
+max_line_length = 88
+extend_ignore =
+    E203  # whitespace before ‘:’
+    E731  # do not assign a lambda expression, use a def
+    E741  # do not use variables named ‘l’, ‘O’, or ‘I’
+    W503  # line break before binary operator
+exclude =
+    .tox
+    build
+    dist
+    .eggs
+    docs/conf.py
