Update documentation URL

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ long_description = file: README.rst
 long_description_content_type = text/x-rst
 url = https://pycollo.readthedocs.io
 project_urls =
-    Documentation = https://pycollo.readthedocs.io
+    Documentation = https://brocksam.github.io/pycollo
     PyPI = https://pypi.org/project/pycollo/
     conda-forge = https://anaconda.org/conda-forge/pycollo
     Source Code = https://github.com/brocksam/pycollo
