Change documentation theme dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ install_requires =
 docs =
     sphinx >=3.2
     sphinx-autodoc-typehints >=1.11
-    sphinx_rtd_theme >=0.5
+    sphinx-material >=0.35
 tests =
     hypothesis >=5.28
     pytest >=6.0
