--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,81 +105,47 @@ exclude = '''
 '''
 
 [tool.ruff]
-line-length = 88
-update-check = false
-target-version = "py38"
+# Enable Pyflakes `E` and `F` codes by default.
+select = ["E", "F"]
+ignore = []
 
-select = [
-  # pyflakes
-  "F",
-  # pycodestyle
-  "E",
-  "W",
-  # flake8-2020
-  "YTT",
-  # flake8-bugbear
-  "B",
-  # flake8-quotes
-  "Q",
-  # pylint
-  "PLE", "PLR", "PLW",
-]
+# Allow autofix for all enabled rules (when `--fix`) is provided.
+fixable = ["A", "B", "C", "D", "E", "F", "..."]
+unfixable = []
 
-ignore = [
-  # space before : (needed for how black formats slicing)
-  # "E203",  # not yet implemented
-  # module level import not at top of file
-  "E402",
-  # do not assign a lambda expression, use a def
-  "E731",
-  # line break before binary operator
-  # "W503",  # not yet implemented
-  # line break after binary operator
-  # "W504",  # not yet implemented
-  # controversial
-  "B006",
-  # controversial
-  "B007",
-  # controversial
-  "B008",
-  # setattr is used to side-step mypy
-  "B009",
-  # getattr is used to side-step mypy
-  "B010",
-  # tests use assert False
-  "B011",
-  # tests use comparisons but not their returned value
-  "B015",
-  # false positives
-  "B019",
-  # Loop control variable overrides iterable it iterates
-  "B020",
-  # Function definition does not bind loop variable
-  "B023",
-  # Functions defined inside a loop must not use variables redefined in the loop
-  # "B301",  # not yet implemented
-  # Too many arguments to function call
-  "PLR0913",
-  # Too many returns
-  "PLR0911",
-  # Too many branches
-  "PLR0912",
-  # Too many statements
-  "PLR0915",
-
-  # Additional checks that don't pass yet
-  # Within an except clause, raise exceptions with ...
-  "B904",
-  # Magic number
-  "PLR2004",
-]
-
+# Exclude a variety of commonly ignored directories.
 exclude = [
-  "docs/sphinxext/*.py",
-  "docs/build/*.py",
-  "docs/temp/*.py",
-  ".eggs/*.py",
-  "versioneer.py",
-  # exclude asv benchmark environments from linting
-  "env",
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
 ]
+per-file-ignores = {}
+
+# Same as Black.
+line-length = 88
+
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+# Assume Python 3.10.
+target-version = "py310"
+
+[tool.ruff.mccabe]
+# Unlike Flake8, default to a complexity level of 10.
+max-complexity = 10
