--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
         with:
             python-version: '3.10'
       - name: Install dependencies
-        run: python -m pip install --upgrade -r mypy ruff
+        run: python -m pip install --upgrade mypy ruff
       - name: Lint with Ruff
         run: ruff check .
       - name: Type check with mypy
