--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,8 +18,21 @@ jobs:
         with:
             python-version: '3.10'
       - name: Install dependencies
-        run: python -m pip install --upgrade mypy ruff
+        run: python -m pip install --upgrade ruff
       - name: Lint with Ruff
         run: ruff check .
+  type-check:
+    name: Static type checking
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+            python-version: '3.10'
+      - name: Install dependencies
+        run: python -m pip install --upgrade mypy
       - name: Type check with mypy
         run: mypy .
+
