--- a/pyproject.toml
+++ b/pyproject.toml
@@ -149,3 +149,6 @@ target-version = "py310"
 [tool.ruff.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
+
+[tool.mypy]
+ignore_missing_imports = true
