Enable W rules in Ruff configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,7 @@ exclude = '''
 
 [tool.ruff]
 # Enable Pyflakes `E` and `F` codes by default.
-select = ["C4", "E", "F", "I"]
+select = ["C4", "E", "F", "I", "W"]
 ignore = [
     "E501",  # Line too long (<LINE LENGTH> > <LINE LENGTH LIMIT> characters)
     "E741",  # Ambiguous variable name: `<VARIABLE NAME>`
