Add W rules to Ruff fixable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,7 +115,7 @@ ignore = [
 ]
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
-fixable = ["A", "B", "C", "D", "E", "F", "I"]
+fixable = ["A", "B", "C", "D", "E", "F", "I", "W"]
 unfixable = []
 
 # Exclude a variety of commonly ignored directories.
