--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,9 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install dependencies
-        run: python -m pip install --upgrade -r docs/requirements.txt
+        run: python -m pip install --upgrade -r requirements.txt -r docs/requirements.txt
+      - name: Install Pycollo
+        run: python -m pip install .
       - name: Build documentation with Sphinx
         run: |
           make -C docs clean
